# slovo

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
examples/: 01_chat.cpp  02_stream.cpp  03_tools.cpp  04_local.cpp
include/slovo/: slovo.hpp
tests/: test_slovo.cpp
